# ApplicationProjects

./: README.md
algorithms/2_semestr/2 контест/: 1.cpp  10.cpp  12.cpp  13.cpp  14.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
algorithms/2_semestr/3contest/: CMakeLists.txt  main.cpp
algorithms/contest1/binarysearch/: CMakeLists.txt  main  main.cpp
algorithms/contest1/cbinotr/: CMakeLists.txt  main.cpp
algorithms/contest1/ciklsdvig/: CMakeLists.txt  main.cpp
algorithms/contest1/dstack/: CMakeLists.txt  main.cpp
algorithms/contest1/equeue/: CMakeLists.txt  main.cpp
algorithms/contest1/fpolskazapis/: CMakeLists.txt  main.cpp
algorithms/contest1/hsqrt/: CMakeLists.txt  main.cpp
algorithms/contest1/iprefpostmin/: CMakeLists.txt  main.cpp
algorithms/contest1/skobki/: CMakeLists.txt  main.cpp
algorithms/contest1_/: CMakeLists.txt  main.cpp
algorithms/contest2/CBinaryHeap/: CMakeLists.txt  test
algorithms/contest2/amerge/: main.cpp  (+1 more)
cpp/: .2.S.swp
cpp/binsearch/: CMakeLists.txt  main.cpp
cpp/deck/: CMakeLists.txt  Deque.h  main.cpp
cpp/deque/: CMakeLists.txt  Deque.h  main.cpp  stress_test.cpp  tests.cpp
cpp/factorization/: CMakeLists.txt  main.cpp
cpp/finalbigint/: CMakeLists.txt  big_integer.cpp  big_integer.h  main.cpp
cpp/finaltest/: foreigners_c___zachet-2-1.doc
cpp/geometry/: CMakeLists.txt  geometry.h  main.cpp
cpp/matrix/: CMakeLists.txt  main.cpp  matrix.h
cpp/ringbuffer/: CMakeLists.txt  main.cpp
cpp/spiral/: CMakeLists.txt  main.cpp
cpp/string/: CMakeLists.txt  main.cpp  string.h  stringt.cpp  stringt.h
(+77 files in other folders)
